ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_assignment.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "format!(\"{:#?}\", res)"

---
Graph {
    vars: [
        Variable {
            id: "taut",
            last_fact: [
                Fact {
                    id: 3,
                    note: "<b>taut</b> at 1<br/>Assign(\"%0\", \"%1\")",
                },
            ],
            killed: false,
        },
        Variable {
            id: "%1",
            last_fact: [
                Fact {
                    id: 4,
                    note: "<b>%1</b> at 1<br/>Assign(\"%0\", \"%1\")",
                },
            ],
            killed: false,
        },
        Variable {
            id: "%0",
            last_fact: [
                Fact {
                    id: 5,
                    note: "<b>%0</b> at 1<br/>Assign(\"%0\", \"%1\")",
                },
            ],
            killed: false,
        },
    ],
    facts: [
        Fact {
            id: 0,
            note: "taut",
        },
        Fact {
            id: 1,
            note: "<b>taut</b> at 0<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 2,
            note: "<b>%1</b> at 0<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 3,
            note: "<b>taut</b> at 1<br/>Assign(\"%0\", \"%1\")",
        },
        Fact {
            id: 4,
            note: "<b>%1</b> at 1<br/>Assign(\"%0\", \"%1\")",
        },
        Fact {
            id: 5,
            note: "<b>%0</b> at 1<br/>Assign(\"%0\", \"%1\")",
        },
    ],
    edges: [
        Normal {
            from: Fact {
                id: 0,
                note: "taut",
            },
            to: Fact {
                id: 1,
                note: "<b>taut</b> at 0<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 0,
                note: "taut",
            },
            to: Fact {
                id: 2,
                note: "<b>%1</b> at 0<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 1,
                note: "<b>taut</b> at 0<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 3,
                note: "<b>taut</b> at 1<br/>Assign(\"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 2,
                note: "<b>%1</b> at 0<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 4,
                note: "<b>%1</b> at 1<br/>Assign(\"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 2,
                note: "<b>%1</b> at 0<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 5,
                note: "<b>%0</b> at 1<br/>Assign(\"%0\", \"%1\")",
            },
        },
    ],
    counter: Counter {
        counter: 6,
    },
    epoch: Counter {
        counter: 2,
    },
}
