ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_assignment_dot.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "std::str::from_utf8(dot.get_ref()).unwrap()"

---
digraph example1 {
    Fact0[label=<>];
    Fact1[label=<<b>taut</b> at 0<br/>Assign("%0", "%1")>];
    Fact0 -> Fact1[label=""];
}

