ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_binop.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "format!(\"{:#?}\", res)"

---
Graph {
    vars: {
        "test": [
            Variable {
                id: "taut",
                last_fact: [
                    Fact {
                        id: 9,
                        note: "<b>taut</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 0,
                        note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%0",
                last_fact: [
                    Fact {
                        id: 10,
                        note: "<b>%0</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 1,
                        note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%1",
                last_fact: [
                    Fact {
                        id: 11,
                        note: "<b>%1</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 4,
                        note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%2",
                last_fact: [
                    Fact {
                        id: 12,
                        note: "<b>%2</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 8,
                        note: "<b>%2</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
                    },
                ),
                killed: false,
            },
        ],
    },
    functions: {
        "test": Function {
            name: "test",
            first_facts: [],
            last_facts: [
                Fact {
                    id: 9,
                    note: "<b>taut</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                },
                Fact {
                    id: 10,
                    note: "<b>%0</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                },
                Fact {
                    id: 11,
                    note: "<b>%1</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                },
                Fact {
                    id: 12,
                    note: "<b>%2</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
                },
            ],
        },
    },
    facts: [
        Fact {
            id: 0,
            note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 1,
            note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 2,
            note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 3,
            note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 4,
            note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
        },
        Fact {
            id: 5,
            note: "<b>taut</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
        },
        Fact {
            id: 6,
            note: "<b>%0</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
        },
        Fact {
            id: 7,
            note: "<b>%1</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
        },
        Fact {
            id: 8,
            note: "<b>%2</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
        },
        Fact {
            id: 9,
            note: "<b>taut</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
        },
        Fact {
            id: 10,
            note: "<b>%0</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
        },
        Fact {
            id: 11,
            note: "<b>%1</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
        },
        Fact {
            id: 12,
            note: "<b>%2</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
        },
    ],
    edges: [
        Normal {
            from: Fact {
                id: 0,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 2,
                note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 1,
                note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 0,
                note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
            },
            to: Fact {
                id: 4,
                note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
            },
        },
        Normal {
            from: Fact {
                id: 2,
                note: "<b>taut</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 5,
                note: "<b>taut</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 6,
                note: "<b>%0</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 4,
                note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 7,
                note: "<b>%1</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 3,
                note: "<b>%0</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 8,
                note: "<b>%2</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 4,
                note: "<b>%1</b> at 1<br/>Const(\"%1\", 1.0)",
            },
            to: Fact {
                id: 8,
                note: "<b>%2</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
        },
        Normal {
            from: Fact {
                id: 5,
                note: "<b>taut</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
            to: Fact {
                id: 9,
                note: "<b>taut</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 6,
                note: "<b>%0</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
            to: Fact {
                id: 10,
                note: "<b>%0</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 7,
                note: "<b>%1</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
            to: Fact {
                id: 11,
                note: "<b>%1</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 7,
                note: "<b>%1</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
            to: Fact {
                id: 12,
                note: "<b>%2</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
            },
        },
        Normal {
            from: Fact {
                id: 6,
                note: "<b>%0</b> at 2<br/>BinOp(\"%2\", \"%0\", \"%1\")",
            },
            to: Fact {
                id: 12,
                note: "<b>%2</b> at 3<br/>BinOp(\"%2\", \"%1\", \"%0\")",
            },
        },
    ],
    counter: Counter {
        counter: 13,
    },
    epoch: Counter {
        counter: 4,
    },
}
