ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_block_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (18) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (16) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (12) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Jump(1)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Block(1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Const(1, 2.0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (10) [bend right] edge  node { } (11);
		\path[->, blue] (10) [bend right] edge  node { } (12);
		\path[->, blue] (10) [bend right] edge  node { } (16);
		\path[->, blue] (10) [bend right] edge  node { } (17);
		\path[->, blue] (10) [bend right] edge  node { } (18);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (0) edge (10);
		\path[->] (10) edge (12);
		\path[->] (0) edge (13);
		\path[->, bend right] (5) edge (14);
		\path[->] (6) edge (15);
		\path[->, bend right] (12) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (18);


                \end{tikzpicture}
            \end{document}
