ide/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_const.snap
---
source: ide/src/tests/icfg/convert.rs
expression: "format!(\"{:#?}\", res)"

---
Graph {
    vars: {
        "test": [
            Variable {
                id: "taut",
                last_fact: [
                    Fact {
                        id: 0,
                        note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 0,
                        note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
            Variable {
                id: "%0",
                last_fact: [
                    Fact {
                        id: 1,
                        note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ],
                first_fact: Some(
                    Fact {
                        id: 1,
                        note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
                    },
                ),
                killed: false,
            },
        ],
    },
    facts: [
        Fact {
            id: 0,
            note: "<b>taut</b> at 0<br/>Const(\"%0\", 1.0)",
        },
        Fact {
            id: 1,
            note: "<b>%0</b> at 0<br/>Const(\"%0\", 1.0)",
        },
    ],
    edges: [],
    counter: Counter {
        counter: 2,
    },
    epoch: Counter {
        counter: 1,
    },
}
